--- a/package.json
+++ b/package.json
@@ -22,12 +22,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.176",
     "@types/react": "17.0.19",
     "copy-webpack-plugin": "^9.0.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
-    "typescript": "4.4.2"
+    "typescript": "^5.9.2"
   }
 }
